--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -31,13 +31,13 @@ nav{
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgb(157, 94, 177);
+    background: linear-gradient(to top, #d9bddb, #5a0153);
     padding: 10px;
     grid-area: nav;
 }
 
 footer{
-    background-color: rgb(191, 114, 214);
+    background: linear-gradient(to bottom, #d9bddb, #5a0153);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -150,8 +150,12 @@ p{
 }
 .contain_body_img{
     margin: 4px;
+    transition: transform .2s;
+    transform: scale(1);
 }
-
+.contain_body_img:hover{
+    transform: scale(1.2);  
+}
 .reservas_img{
     width: 600px;
     height: 600px;
@@ -170,7 +174,6 @@ p{
 nav{
     display: flex;
     justify-content: center;
-    background-color: rgb(157, 94, 177);
     margin: 0;
 }
 
@@ -196,7 +199,6 @@ main{
     nav{
         display: flex;
         justify-content: center;
-        background-color: rgb(157, 94, 177);
         margin: 0;
     }
 
@@ -227,7 +229,6 @@ main{
     nav{
         display: flex;
         justify-content: center;
-        background-color: rgb(157, 94, 177);
         margin: 0;
     }
 
@@ -261,7 +262,6 @@ main{
     nav{
         display: flex;
         justify-content: center;
-        background-color: rgb(157, 94, 177);
         margin: 0;
     }
     main{
