--- a/style/styles.css
+++ b/style/styles.css
@@ -13,9 +13,25 @@
           flex-direction: column;
 }
 
+.lorem-1 {
+  color: red;
+}
+
+.lorem-2 {
+  color: green;
+}
+
+.lorem-3 {
+  color: blue;
+}
+
+.lorem-4 {
+  color: white;
+}
+
 * {
   margin: 0;
-  padding: 0%;
+  padding: 0;
 }
 
 body {
@@ -52,7 +68,6 @@ nav {
   -ms-grid-column: 1;
   grid-area: nav;
   font-size: 20px;
-  color: #97e9b0;
   font-weight: bold;
 }
 
@@ -127,6 +142,38 @@ footer img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
+}
+
+.prueba {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 10px 0;
+}
+
+.button-prueba, .button-prueba-cancelar, .button-prueba-informacion {
+  width: 200px;
+  height: 50px;
+  background-color: #00ff59;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  border-radius: 20px;
+  border: 1px solid black;
+}
+
+.button-prueba-cancelar {
+  background-color: red;
+}
+
+.button-prueba-informacion {
+  background-color: #00c8ff;
 }
 
 @media (max-width: 1375px) {
