--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 @import '../secciones/contacto/style/contacto.scss';
+@import './variables.scss';
 
 * {
     margin: 0;
-    padding: 0%;
+    padding: 0;
 }
 
 body {
-    background-color: rgb(217, 189, 219);
+    background-color: $pink-background;
     margin: 0;
     font-family: "poppins";
     display: grid;
@@ -31,11 +32,10 @@ nav {
     width: 100%;
     display: flex;
     justify-content: center;
-    background: linear-gradient(to top, #c29dc5, #b139a76c);
+    background: linear-gradient(to top, $pink-gradient-background, $purple-gradient-background);
     padding: 10px;
     grid-area: nav;
     font-size: 20px;
-    color: rgb(151, 233, 176);
     font-weight: bold;
 }
 
@@ -46,28 +46,28 @@ main {
     height: 60rem;
     .contentText {
         text-align: center;
-        color: rgb(0, 0, 0);
+        color: $black;
         grid-area: contentText;
 
         h1 {
             font-size: 50px;
             font-weight: bolder;
-            color: black;
+            color: $black;
             margin-bottom: 10px;
         }
         p {
             font-size: 15px;
             font-weight: 900;
+            
         }
         img{
-            width: 600px;
-            height: 600px;
+           @include img(600px, 600px);
         }
     }
 }
 
 footer {
-    background: linear-gradient(to bottom, #c29dc5, #b139a76c);
+    background: linear-gradient(to bottom, $pink-gradient-background, $purple-gradient-background);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,10 +81,36 @@ footer {
     }
 
     img {
-        width: 40px;
-        height: 40px;
+        @include img(40px, 40px);
         margin-right: 10px;
     }
+}
+
+.prueba{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 10px 0;
+}
+
+.button-prueba{
+	width:200px;
+	height:50px;
+	background-color:rgb(0, 255, 89);
+	text-align:center;
+	color: $black;
+    font-size: 20px;
+	border-radius:20px;
+	border:1px solid $black;
+}
+
+.button-prueba-cancelar{
+    @extend .button-prueba;
+    background-color: red;
+}
+.button-prueba-informacion{
+    @extend .button-prueba;
+    background-color: rgb(0, 200, 255);
 }
 
 
