--- a/style/styles.css
+++ b/style/styles.css
@@ -13,22 +13,6 @@
           flex-direction: column;
 }
 
-.lorem-1 {
-  color: red;
-}
-
-.lorem-2 {
-  color: green;
-}
-
-.lorem-3 {
-  color: blue;
-}
-
-.lorem-4 {
-  color: white;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -91,21 +75,25 @@ main .contentText {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: contentText;
+  background: #ffffff40;
+  margin: 10px 0;
+  padding: 5vh;
+  border-radius: 30px;
 }
 
-main .contentText h1 {
+main h1 {
   font-size: 50px;
   font-weight: bolder;
   color: black;
   margin-bottom: 10px;
 }
 
-main .contentText p {
+main p {
   font-size: 15px;
   font-weight: 900;
 }
 
-main .contentText img {
+main img {
   width: 600px;
   height: 600px;
 }
@@ -142,38 +130,6 @@ footer img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
-}
-
-.prueba {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin: 10px 0;
-}
-
-.button-prueba, .button-prueba-cancelar, .button-prueba-informacion {
-  width: 200px;
-  height: 50px;
-  background-color: #00ff59;
-  text-align: center;
-  color: black;
-  font-size: 20px;
-  border-radius: 20px;
-  border: 1px solid black;
-}
-
-.button-prueba-cancelar {
-  background-color: red;
-}
-
-.button-prueba-informacion {
-  background-color: #00c8ff;
 }
 
 @media (max-width: 1375px) {
