--- a/style/styles.scss
+++ b/style/styles.scss
@@ -48,23 +48,30 @@ main {
         text-align: center;
         color: $black;
         grid-area: contentText;
+        background: #ffffff40;
+        margin: 10px 0;
+        padding: 5vh;
+        border-radius: 30px;
+    }
 
-        h1 {
-            font-size: 50px;
-            font-weight: bolder;
-            color: $black;
-            margin-bottom: 10px;
-        }
-        p {
-            font-size: 15px;
-            font-weight: 900;
-            
-        }
-        img{
-           @include img(600px, 600px);
-        }
+    h1 {
+        font-size: 50px;
+        font-weight: bolder;
+        color: $black;
+        margin-bottom: 10px;
+    }
+
+    p {
+        font-size: 15px;
+        font-weight: 900;
+
+    }
+
+    img {
+        @include img(600px, 600px);
     }
 }
+
 
 footer {
     background: linear-gradient(to bottom, $pink-gradient-background, $purple-gradient-background);
@@ -85,34 +92,6 @@ footer {
         margin-right: 10px;
     }
 }
-
-.prueba{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 10px 0;
-}
-
-.button-prueba{
-	width:200px;
-	height:50px;
-	background-color:rgb(0, 255, 89);
-	text-align:center;
-	color: $black;
-    font-size: 20px;
-	border-radius:20px;
-	border:1px solid $black;
-}
-
-.button-prueba-cancelar{
-    @extend .button-prueba;
-    background-color: red;
-}
-.button-prueba-informacion{
-    @extend .button-prueba;
-    background-color: rgb(0, 200, 255);
-}
-
 
 @media (max-width: 1375px) {
     body {
