--- a/style/variables.css
+++ b/style/variables.css
@@ -1,16 +1,1 @@
-.lorem-1 {
-  color: red;
-}
-
-.lorem-2 {
-  color: green;
-}
-
-.lorem-3 {
-  color: blue;
-}
-
-.lorem-4 {
-  color: white;
-}
-/*# sourceMappingURL=variables.css.map */
+/* No CSS *//*# sourceMappingURL=variables.css.map */
